--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,9 @@
         <a class="logo" href="./index.html"
           ><span class="logo__webstudio">Web</span>Studio
         </a>
+        <svg class="modal-menu">
+          <use href="#icon-menu"></use>
+        </svg>
         <nav class="navigation">
           <a class="navigation__item links" href="./index.html">Agencja</a>
           <a
@@ -26,36 +29,360 @@
           >
           <a class="navigation__item links">Kontakt</a>
         </nav>
-        <a
-          class="links container__links container__links--margin"
-          href="mailto:info@devstudio.com"
-          ><svg class="links__envelope">
-            <use href="./images/icons.svg#icon-envelope"></use>
-          </svg>
-          info@devstudio.com
-        </a>
-        <a class="links container__links" href="tel:+48 111 111 111"
-          ><svg class="links__smartphone">
-            <use href="./images/icons.svg#icon-smartphone"></use>
-          </svg>
-          +48 111 111 111
-        </a>
+        <div class="contact-column">
+          <a
+            class="links container__links container__links--margin"
+            href="mailto:info@devstudio.com"
+            ><svg class="links__envelope">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            info@devstudio.com
+          </a>
+          <a class="links container__links" href="tel:+48 111 111 111"
+            ><svg class="links__smartphone">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            +48 111 111 111
+          </a>
+        </div>
       </div>
     </header>
     <main>
       <section class="section">
-        <div class="container">
+        <div class="container container__portfolio">
           <div class="buttons">
             <button class="buttons__item" type="button">Wszystkie</button>
             <button class="buttons__item" type="button">Strony</button>
             <button class="buttons__item" type="button">Aplikacje</button>
-            <button class="buttons__item" type="button">Dizajn</button>
-            <button class="buttons__item margin-zero" type="button">
+            <button class="buttons__item buttons__item--mobile" type="button">
+              Dizajn
+            </button>
+            <button
+              class="buttons__item buttons__item--mobile margin-zero"
+              type="button"
+            >
               Marketing
             </button>
           </div>
         </div>
         <div class="container">
+          <ul class="list">
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/technocrack-desktop.jpg"
+                    srcset="
+                      ./images/technocrack-mobile.jpg 450w,
+                      ./images/technocrack-tablet.jpg 354w
+                    "
+                    alt="Laptop z włączoną stroną internetową."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Technocrack<br /><span class="portfolio-figcaption-item__span"
+                    >Strona internetowa</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/graphics-desktop.jpg"
+                    srcset="
+                      ./images/graphics-mobile.jpg 450w,
+                      ./images/graphics-tablet.jpg 354w
+                    "
+                    alt="Dwaj mężczyźni grają w koszykówkę."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Grafika New Orlean vs Golden Star<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Dizajn</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure margin-zero">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/restaurant-desktop.jpg"
+                    srcset="
+                      ./images/restaurant-mobile.jpg 450w,
+                      ./images/restaurant-tablet.jpg 354w
+                    "
+                    alt="Logo restauracji Seafood."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Restauracja Seafood<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Aplikacja</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/headphones-desktop.jpg"
+                    srcset="
+                      ./images/headphones-mobile.jpg 450w,
+                      ./images/headphones-tablet.jpg 354w
+                    "
+                    alt="Czarne słuchawki."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Projekt Prime<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Marketing</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/boxes-desktop.jpg"
+                    srcset="
+                      ./images/boxes-mobile.jpg 450w,
+                      ./images/boxes-tablet.jpg 354w
+                    "
+                    alt="Białe i brązowe pudełko."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Projekt Boxes<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Aplikacja</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure margin-zero">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/monitor-desktop.jpg"
+                    srcset="
+                      ./images/monitor-mobile.jpg 450w,
+                      ./images/monitor-tablet.jpg 354w
+                    "
+                    alt="Monitor firmy Apple."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Inspiration has no Borders<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Strona internetowa</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/book-desktop.jpg"
+                    srcset="
+                      ./images/book-mobile.jpg 450w,
+                      ./images/book-tablet.jpg 354w
+                    "
+                    alt="Magazyn zawierający kilka zdjęć."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Magazyn Limited Edition<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Dizajn</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/lab-desktop.jpg"
+                    srcset="
+                      ./images/lab-mobile.jpg 450w,
+                      ./images/lab-tablet.jpg 354w
+                    "
+                    alt="Biała zawieszka z napisem."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Projekt LAB<br /><span class="portfolio-figcaption-item__span"
+                    >Marketing</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-grid">
+              <figure class="portfolio-figure margin-zero">
+                <div class="portfolio-img">
+                  <img
+                    src="./images/laptop-desktop.jpg"
+                    srcset="
+                      ./images/laptop-mobile.jpg 450w,
+                      ./images/laptop-tablet.jpg 354w
+                    "
+                    alt="Laptop z włączoną stroną internetową."
+                    width="100%"
+                    height="100%"
+                  />
+                  <div class="portfolio-img__mask">
+                    Technocrack jest popularną platformą wykorzystywaną do
+                    rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                    platformę do celów szpiegowskich i ataków na
+                    niezabezpieczone serwery konkurencji
+                  </div>
+                </div>
+                <figcaption class="portfolio-figcaption-item">
+                  Growing Business<br /><span
+                    class="portfolio-figcaption-item__span"
+                    >Aplikacja</span
+                  >
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container container--footer">
+        <div class="footer-contact">
+          <a class="logo logo--footer" href="./index.html"
+            ><span class="logo__webstudio">Web</span>Studio</a
+          >
+          <address class="address-footer">
+            <span class="address-span">m.Warszawa, Aleje Jerozolimskie 21</span
+            ><br />
+            <a class="links links--footer" href="mailto:info@devstudio.com">
+              info@example.com
+            </a>
+            <br />
+            <a class="links links--footer" href="tel:+48 111 111 111">
+              +48 111 111 111
+            </a>
+          </address>
+        </div>
+        <div class="join-for-us">
+          <p>DOŁĄCZ DO NAS</p>
+          <div class="social-ellipse social-ellipse--footer">
+            <svg class="social-ellipse__icons">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </div>
+          <div class="social-ellipse social-ellipse--footer">
+            <svg class="social-ellipse__icons">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </div>
+          <div class="social-ellipse social-ellipse--footer">
+            <svg class="social-ellipse__icons">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </div>
+          <div class="social-ellipse social-ellipse--footer margin-zero">
+            <svg class="social-ellipse__icons">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="newsletter">
+          <p>ZAPISZ SIĘ DO NEWSLETTERA</p>
+          <form class="footer-form">
+            <input
+              class="footer-form__email"
+              type="email"
+              placeholder="E-mail"
+            />
+            <button class="footer-form__btn" type="submit">
+              Zapisz się
+              <svg class="form-newsletter-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
+<!-- <div class="container">
           <figure class="portfolio-figure">
             <div class="portfolio-img">
               <img
@@ -250,67 +577,4 @@
               >
             </figcaption>
           </figure>
-        </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="container container--footer">
-        <div class="footer-contact">
-          <a class="logo logo--footer" href="./index.html"
-            ><span class="logo__webstudio">Web</span>Studio</a
-          >
-          <address class="font-style-normal">
-            <span class="address-span">m.Warszawa, Aleje Jerozolimskie 21</span
-            ><br />
-            <a class="links links--footer" href="mailto:info@devstudio.com">
-              info@example.com
-            </a>
-            <br />
-            <a class="links links--footer" href="tel:+48 111 111 111">
-              +48 111 111 111
-            </a>
-          </address>
-        </div>
-        <div class="join-for-us">
-          <p>DOŁĄCZ DO NAS</p>
-          <div class="social-ellipse social-ellipse--footer">
-            <svg class="social-ellipse__icons">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </div>
-          <div class="social-ellipse social-ellipse--footer">
-            <svg class="social-ellipse__icons">
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </div>
-          <div class="social-ellipse social-ellipse--footer">
-            <svg class="social-ellipse__icons">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </div>
-          <div class="social-ellipse social-ellipse--footer margin-zero">
-            <svg class="social-ellipse__icons">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </div>
-        </div>
-        <div class="newsletter">
-          <p>ZAPISZ SIĘ DO NEWSLETTERA</p>
-          <form class="footer-form">
-            <input
-              class="footer-form__email"
-              type="email"
-              placeholder="E-mail"
-            />
-            <button class="footer-form__btn" type="submit">
-              Zapisz się
-              <svg class="form-newsletter-icon">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
-      </div>
-    </footer>
-  </body>
-</html>
+        </div> -->
