--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <div class="modal">
             <svg class="modal__icon">
               <use
+                class="modal__icon--fill"
                 href="./images/icons.svg#icon-close"
                 data-mobile-menu-close
               ></use>
@@ -113,6 +114,7 @@
             <div class="modal">
               <svg class="modal__icon">
                 <use
+                  class="modal__icon--fill"
                   href="./images/icons.svg#icon-close"
                   data-modal-close
                 ></use>
