--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,53 @@
         <a class="logo" href="./index.html"
           ><span class="logo__webstudio">Web</span>Studio
         </a>
-        <svg class="modal-menu">
+        <svg class="modal-menu" data-mobile-menu-open>
           <use href="#icon-menu"></use>
         </svg>
+        <div class="backdrop is-hidden" data-mobile-menu>
+          <div class="modal">
+            <svg class="modal__icon">
+              <use
+                class="modal__icon--fill"
+                href="./images/icons.svg#icon-close"
+                data-mobile-menu-close
+              ></use>
+            </svg>
+            <nav class="navigation-modal">
+              <a class="navigation-modal__item links" href="./index.html"
+                >Agencja</a
+              >
+              <a class="navigation-modal__item links" href="./portfolio.html"
+                >Portfolio</a
+              >
+              <a class="navigation-modal__item links">Kontakt</a>
+            </nav>
+            <div class="contact-modal">
+              <a class="links contact-modal__item" href="tel:+48 111 111 111">
+                +48 111 111 111
+              </a>
+              <a
+                class="links contact-modal__item"
+                href="mailto:info@devstudio.com"
+              >
+                info@devstudio.com
+              </a>
+            </div>
+            <div class="social-links">
+              <a class="social-links__item links">Instagram</a>
+              <a class="social-links__item links">Twitter</a>
+              <a class="social-links__item links">Facebook</a>
+              <a class="social-links__item links">Linkedln</a>
+            </div>
+          </div>
+        </div>
         <nav class="navigation">
-          <a class="navigation__item links" href="./index.html">Agencja</a>
           <a
             class="navigation__item navigation__item-active links"
-            href="./portfolio.html"
+            href="./index.html"
+            >Agencja</a
+          >
+          <a class="navigation__item links" href="./portfolio.html"
             >Portfolio</a
           >
           <a class="navigation__item links">Kontakt</a>
