--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
           ><span class="logo__webstudio">Web</span>Studio
         </a>
         <svg class="modal-menu" data-mobile-menu-open>
-          <use href="#icon-menu"></use>
+          <use href="./images/icons.svg#icon-menu"></use>
         </svg>
         <div class="backdrop is-hidden" data-mobile-menu>
           <div class="modal">
