--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
         </a>
         <svg class="modal-menu"
         data-mobile-menu-open>
-          <use href="#icon-menu"></use>
+          <use href="./images/icons.svg#icon-menu"></use>
         </svg>
         <div class="backdrop is-hidden" data-mobile-menu>
           <div class="modal">
             <svg class="modal__icon">
               <use
-                class="modal__icon--fill"
                 href="./images/icons.svg#icon-close"
                 data-mobile-menu-close
               ></use>
