--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
           </button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <svg class="modal__icon">
+              <svg class="modal__icon" data-modal-close>
                 <use
-                  class="modal__icon--fill"
                   href="./images/icons.svg#icon-close"
-                  data-modal-close
+                  
                 ></use>
               </svg>
               <p class="modal__heading">
