--- a/index.html
+++ b/index.html
@@ -12,32 +12,17 @@
     <title>Studio</title>
   </head>
   <body>
-    <svg
-      aria-hidden="true"
-      style="position: absolute; width: 0; height: 0; overflow: hidden"
-      version="1.1"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink"
-    >
-      <defs>
-        <symbol id="icon-menu" viewBox="0 0 32 32">
-          <path
-            d="M6.4 11.733v-2.133h19.2v2.133h-19.2zM6.4 17.067h19.2v-2.133h-19.2v2.133zM6.4 22.4h19.2v-2.133h-19.2v2.133z"
-          ></path>
-        </symbol>
-      </defs>
-    </svg>
     <header class="header">
       <div class="container container--header">
         <a class="logo" href="./index.html"
           ><span class="logo__webstudio">Web</span>Studio
         </a>
-        <svg class="modal-menu"
+        <svg class="modal-menu-icon"
         data-mobile-menu-open>
           <use href="./images/icons.svg#icon-menu"></use>
         </svg>
         <div class="backdrop is-hidden" data-mobile-menu>
-          <div class="modal">
+          <div class="modal-menu">
             <svg class="modal__icon">
               <use
                 href="./images/icons.svg#icon-close"
@@ -54,7 +39,7 @@
             <a class="navigation-modal__item links">Kontakt</a>
             </nav>
           <div class="contact-modal">
-            <a class="links contact-modal__item" href="tel:+48 111 111 111">
+            <a class="links contact-modal__item contact-modal__item--modifier" href="tel:+48 111 111 111">
             +48 111 111 111
           </a>
           <a
