--- a/portfolio.html
+++ b/portfolio.html
@@ -17,11 +17,11 @@
         <a class="logo" href="./index.html"
           ><span class="logo__webstudio">Web</span>Studio
         </a>
-        <svg class="modal-menu" data-mobile-menu-open>
+        <svg class="modal-menu-icon" data-mobile-menu-open>
           <use href="./images/icons.svg#icon-menu"></use>
         </svg>
         <div class="backdrop is-hidden" data-mobile-menu>
-          <div class="modal">
+          <div class="modal-menu">
             <svg class="modal__icon">
               <use
                 class="modal__icon--fill"
